--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "type": "git",
     "url": "https://github.com/pete-mc/dataverse-powertools"
   },
-  "version": "0.1.5",
+  "version": "0.1.6",
   "engines": {
     "vscode": "^1.75.0"
   },
@@ -26,12 +26,6 @@
     "menus": {
       "explorer/context": [
         {
-          "submenu": "dataverse-powertools.buildPlugin"
-        },
-        {
-          "submenu": "dataverse-powertools.extractSolution"
-        },
-        {
           "command": "dataverse-powertools.createWebResourceClass",
           "group": "navigation@9",
           "when": "dataverse-powertools.showLoaded && dataverse-powertools.isWebResource"
@@ -40,70 +34,19 @@
           "command": "dataverse-powertools.createWebResourceTest",
           "group": "navigation@10",
           "when": "dataverse-powertools.showLoaded && dataverse-powertools.isWebResource"
-        }
-      ],
-      "dataverse-powertools.buildPlugin": [
-        {
-          "command": "dataverse-powertools.buildPlugin",
-          "alt": "dataverse-powertools.buildPlugin",
-          "when": "dataverse-powertools.showLoaded && dataverse-powertools.isPlugin"
-        },
-        {
-          "command": "dataverse-powertools.buildDeployPlugin",
-          "alt": "dataverse-powertools.buildDeployPlugin",
-          "when": "dataverse-powertools.showLoaded && dataverse-powertools.isPlugin"
-        },
-        {
-          "command": "dataverse-powertools.generateEarlyBound",
-          "alt": "dataverse-powertools.generateEarlyBound",
-          "when": "dataverse-powertools.showLoaded && dataverse-powertools.isPlugin"
         },
         {
           "command": "dataverse-powertools.createPluginClass",
-          "alt": "dataverse-powertools.createPluginClass",
+          "group": "navigation@9",
           "when": "dataverse-powertools.showLoaded && dataverse-powertools.isPlugin"
         },
         {
           "command": "dataverse-powertools.createWorkflowClass",
-          "alt": "dataverse-powertools.createWorkflowClass",
+          "group": "navigation@10",
           "when": "dataverse-powertools.showLoaded && dataverse-powertools.isPlugin"
-        }
-      ],
-      "dataverse-powertools.extractSolution": [
-        {
-          "command": "dataverse-powertools.extractSolution",
-          "when": "dataverse-powertools.showLoaded && dataverse-powertools.isSolution"
-        },
-        {
-          "command": "dataverse-powertools.packSolution",
-          "when": "dataverse-powertools.showLoaded && dataverse-powertools.isSolution"
-        },
-        {
-          "command": "dataverse-powertools.deploySolution",
-          "when": "dataverse-powertools.showLoaded && dataverse-powertools.isSolution"
-        }
-      ],
-      "dataverse-powertools.buildPortal": [
-        {
-          "command": "dataverse-powertools.buildWebresources",
-          "when": "dataverse-powertools.showLoaded && dataverse-powertools.isPortal"
         }
       ]
     },
-    "submenus": [
-      {
-        "id": "dataverse-powertools.buildPlugin",
-        "label": "Plugin Actions"
-      },
-      {
-        "id": "dataverse-powertools.buildWebresources",
-        "label": "Dateverse PowerTools"
-      },
-      {
-        "id": "dataverse-powertools.extractSolution",
-        "label": "Solution Actions"
-      }
-    ],
     "viewsContainers": {
       "activitybar": [
         {
@@ -132,7 +75,7 @@
       },
       {
         "view": "dataversePowerToolsMenu",
-        "contents": "Plugin Menu\n[Build and Deploy Plugins](command:dataverse-powertools.buildDeployPlugin)\n[Build Plugins](command:dataverse-powertools.buildPlugin)\n[Generate Early Bound](command:dataverse-powertools.generateEarlyBound)\n[Create Plugin Class](command:dataverse-powertools.createPluginClass)\n[Create Workflow Class](command:dataverse-powertools.createWorkflowClass)",
+        "contents": "Plugin Menu\n[Build and Deploy Plugins](command:dataverse-powertools.buildDeployPlugin)\n[Build and Deploy Workflows](command:dataverse-powertools.buildDeployWorkflow)\n[Build Project](command:dataverse-powertools.buildProject)\n[Generate Early Bound](command:dataverse-powertools.generateEarlyBound)\n[Create Plugin Class](command:dataverse-powertools.createPluginClass)\n[Create Workflow Class](command:dataverse-powertools.createWorkflowClass)\n[Add Plugin Step Decoration](command:dataverse-powertools.addPluginDecoration)\n[Add Workflow Decoration](command:dataverse-powertools.addWorkflowDecoration)",
         "when": "dataverse-powertools.showLoaded && dataverse-powertools.isPlugin"
       },
       {
@@ -178,8 +121,8 @@
         "enablement": "dataverse-powertools.showLoaded && dataverse-powertools.isPlugin"
       },
       {
-        "command": "dataverse-powertools.buildPlugin",
-        "title": "Dataverse PowerTools: Build Plugins",
+        "command": "dataverse-powertools.buildProject",
+        "title": "Dataverse PowerTools: Build Plugin Project",
         "enablement": "dataverse-powertools.showLoaded && dataverse-powertools.isPlugin"
       },
       {
@@ -253,6 +196,16 @@
         "command": "dataverse-powertools.downloadPortal",
         "title": "Dataverse PowerTools: Download Portal",
         "enablement": "dataverse-powertools.showLoaded && dataverse-powertools.isPortal"
+      },
+      {
+        "command": "dataverse-powertools.addPluginDecoration",
+        "title": "Dataverse PowerTools: Add Plugin Decoration",
+        "enablement": "dataverse-powertools.showLoaded && dataverse-powertools.isPlugin"
+      }      ,
+      {
+        "command": "dataverse-powertools.addWorkflowDecoration",
+        "title": "Dataverse PowerTools: Add Workflow Decoration",
+        "enablement": "dataverse-powertools.showLoaded && dataverse-powertools.isPlugin"
       }
     ]
   },
@@ -273,14 +226,17 @@
     "@types/glob": "^7.2.0",
     "@types/mocha": "^9.1.0",
     "@types/node": "14.x",
+    "@types/uuid": "^9.0.1",
     "@types/vscode": "^1.66.0",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "@vscode/test-electron": "^2.1.3",
     "@vscode/vsce": "^2.19.0",
     "eslint": "^8.11.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "glob": "^7.2.0",
     "mocha": "^9.2.2",
+    "prettier": "2.8.8",
     "ts-loader": "^9.2.8",
     "typescript": "^4.5.5",
     "webpack": "^5.76.0",
@@ -288,6 +244,7 @@
   },
   "dependencies": {
     "fs-extra": "^10.1.0",
-    "node-fetch": "^3.2.10"
+    "node-fetch": "^3.2.10",
+    "uuid": "^9.0.0"
   }
 }
