--- a/templates/plugin/PROJECTNAMESPACE.csproj/2.csproj
+++ b/templates/plugin/PROJECTNAMESPACE.csproj/2.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.CrmSdk.CoreAssemblies" Version="9.0.2.45" />
     <PackageReference Include="Microsoft.CrmSdk.Workflow" Version="9.0.2.45" />
+    <PackageReference Include="Microsoft.CrmSdk.CoreTools" Version="9.1.0.79" />
     <PackageReference Include="spkl" Version="1.0.640" />
   </ItemGroup>
 </Project>
